[package]
name = "cocolo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.14.2", features = ["dynamic_linking"]}
bevy_ecs_tilemap = "0.14.0"
bevy_pancam = "0.14.0"
noise = "0.9.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[profile.dev] #small optimizations for local code
opt-level = 1

[profile.dev.package."*"] #large optimizations for dependencies
opt-level = 3
